--- a/SCME.UI/Properties/Resources.ru-RU.resx
+++ b/SCME.UI/Properties/Resources.ru-RU.resx
@@ -828,4 +828,7 @@
   <data name="VrrmV" xml:space="preserve">
     <value>VRRM, В</value>
   </data>
+  <data name="WarningEmulation" xml:space="preserve">
+    <value>Блоки находящиеся в режиме умуляции</value>
+  </data>
 </root>
