Добавил отображение статуса подключения при потере/восстановлении связи с сервером

--- a/SCME.UI/Properties/Resources.ru-RU.resx
+++ b/SCME.UI/Properties/Resources.ru-RU.resx
@@ -831,4 +831,13 @@
   <data name="WarningEmulation" xml:space="preserve">
     <value>Блоки находящиеся в режиме умуляции</value>
   </data>
+  <data name="Local" xml:space="preserve">
+    <value>Автономно</value>
+  </data>
+  <data name="NoLink" xml:space="preserve">
+    <value>Нет связи</value>
+  </data>
+  <data name="Sunc." xml:space="preserve">
+    <value>Синхр.</value>
+  </data>
 </root>
