--- a/SCME.UI/Properties/Resources.resx
+++ b/SCME.UI/Properties/Resources.resx
@@ -859,4 +859,13 @@
   <data name="WarningEmulation" xml:space="preserve">
     <value>Blocks in emulation mode</value>
   </data>
+  <data name="Local" xml:space="preserve">
+    <value>Local</value>
+  </data>
+  <data name="NoLink" xml:space="preserve">
+    <value>No link</value>
+  </data>
+  <data name="Sunc." xml:space="preserve">
+    <value>Sunc.</value>
+  </data>
 </root>
