--- a/SCME.WpfControlLibrary/Properties/Resources.ru-RU.resx
+++ b/SCME.WpfControlLibrary/Properties/Resources.ru-RU.resx
@@ -813,4 +813,16 @@
   <data name="IHItm" xml:space="preserve">
     <value>Форсирующий ток, А</value>
   </data>
+  <data name="Housing" xml:space="preserve">
+    <value>Корпус</value>
+  </data>
+  <data name="Output" xml:space="preserve">
+    <value>Вывод</value>
+  </data>
+  <data name="BotTempName" xml:space="preserve">
+    <value>Нижняя пластина, C</value>
+  </data>
+  <data name="TopTempName" xml:space="preserve">
+    <value>Верхняя пластина, C</value>
+  </data>
 </root>
