--- a/SCME.UI/Properties/Resources.resx
+++ b/SCME.UI/Properties/Resources.resx
@@ -871,4 +871,13 @@
   <data name="AllProfiles" xml:space="preserve">
     <value>All profiles</value>
   </data>
+  <data name="Vgnt" xml:space="preserve">
+    <value>VGNT</value>
+  </data>
+  <data name="Ignt_mA" xml:space="preserve">
+    <value>IGNT, mA</value>
+  </data>
+  <data name="Vgnt_V" xml:space="preserve">
+    <value>VGNT, V</value>
+  </data>
 </root>
