--- a/SCME.UI/Properties/Resources.ru-RU.resx
+++ b/SCME.UI/Properties/Resources.ru-RU.resx
@@ -843,4 +843,13 @@
   <data name="AllProfiles" xml:space="preserve">
     <value>Всего профилей</value>
   </data>
+  <data name="Vgnt" xml:space="preserve">
+    <value>VGNT</value>
+  </data>
+  <data name="Ignt_mA" xml:space="preserve">
+    <value>IGNT, мА</value>
+  </data>
+  <data name="Vgnt_V" xml:space="preserve">
+    <value>VGNT, В</value>
+  </data>
 </root>
