--- a/SCME.WpfControlLibrary/Properties/Resources.ru-RU.resx
+++ b/SCME.WpfControlLibrary/Properties/Resources.ru-RU.resx
@@ -825,4 +825,16 @@
   <data name="TopTempName" xml:space="preserve">
     <value>Верхняя пластина, C</value>
   </data>
+  <data name="Vgnt" xml:space="preserve">
+    <value>VGNT</value>
+  </data>
+  <data name="TestVoltage" xml:space="preserve">
+    <value>Test Voltage</value>
+  </data>
+  <data name="GateLimitI" xml:space="preserve">
+    <value>Макс. IGNT, мА</value>
+  </data>
+  <data name="GateLimitV" xml:space="preserve">
+    <value>Макс. UGNT, В</value>
+  </data>
 </root>
