Высота перенесена в параметры

--- a/SCME.UI/Properties/Resources.ru-RU.resx
+++ b/SCME.UI/Properties/Resources.ru-RU.resx
@@ -877,7 +877,7 @@
     <value>Мощность, кВт</value>
   </data>
   <data name="AtuPrePulseValue" xml:space="preserve">
-    <value>Амплитуда предъимпульса</value>
+    <value>Амплитуда предимпульса</value>
   </data>
   <data name="AtuPRSM" xml:space="preserve">
     <value>PRSM, кВт</value>
