Catcher'ы исключений Agent и UpdateServer

--- a/SCME.WpfControlLibrary/Properties/Resources.ru-RU.resx
+++ b/SCME.WpfControlLibrary/Properties/Resources.ru-RU.resx
@@ -835,6 +835,6 @@
     <value>Макс. IGNT, мА</value>
   </data>
   <data name="GateLimitV" xml:space="preserve">
-    <value>Макс. UGNT, В</value>
+    <value>Макс. UGNT, мВ</value>
   </data>
 </root>
