--- a/SCME.WpfControlLibrary/Properties/Resources.ru-RU.resx
+++ b/SCME.WpfControlLibrary/Properties/Resources.ru-RU.resx
@@ -837,4 +837,7 @@
   <data name="GateLimitV" xml:space="preserve">
     <value>Макс. UGD, мВ</value>
   </data>
+  <data name="ModuleType" xml:space="preserve">
+    <value>Тип модуля</value>
+  </data>
 </root>
